2009-07-05  Jānis Rukšāns <thedogfarted@gmail.com>

	Reviewed by Jonathon Jongsma

	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/pattern.cc:
	* cairomm/pattern.h:
	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h: Restore 1.6.x ABI / API that was
	  unintentionally broken by the matrix changes in the 1.8.x series

2009-01-26  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS:
	* configure.in: bump version for 1.8.0

2009-01-20  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/surface.h: fixed the documentation for ImageSurface::create() to
	match the cairo C documentation (it must have changed since we initially
	copied the documentation -- it'd really be nice to have a way to automatically
	generate the C++ documentation...)

2008-12-20  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in:
	* tests/test-matrix.cc:
	* tests/test-user-font.cc: fix some test build issues that were causing
	distcheck to fail

2008-12-20  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS:
	* configure.in: update for release

2008-12-20  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/matrix.cc:
	* cairomm/matrix.h: change free convenience function 'scaled_matrix()' to
	'scaling_matrix()' to better match the other names (e.g.
	'translation_matrix()').  This API was added in 1.7.x so while it is an API
	change, it doesn't affect any stable API.

2008-12-20  Armin Burgmeier  <armin@openismus.com>

	* cairomm/pattern.h: Forward-declared Matrix as a class instead of as
	a struct, to prevent MSVC from complaining about "'Cairo::Matrix' :
	type name first seen using 'struct' now seen using 'class'".

	* MSVC_Net2005/examples/png_file:
	* MSVC_Net2008/examples/png_file: Removed, as the corresponding
	example has been removed.

	* MSVC_Net2005/cairomm/cairomm.vcproj:
	* MSVC_Net2008/cairomm/cairomm.vcproj: Link against libsigc++, added
	matrix.h, win32_font.h, matrix.cc and win32_font.cc to the project.

	* MSVC_Net2005/examples/pdf-surface/pdf-surface.vcproj: