@@ -1,3 +1,10 @@
+2009-07-07  Christopher Harvey <chris@basementcode.com>
+
+	* cairomm/context.h
+
+	Added some documentation to the rel_* functions in the Context class
+	about their behavior when there is no current point.
+
 2009-07-05  Jānis Rukšāns <thedogfarted@gmail.com>
 
 	Reviewed by Jonathon Jongsma
